[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reaperx"
version = "0.2.0"
description = "Ultimate OSINT toolkit with a Flask web interface"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "AlertBros" }]
keywords = ["osint", "investigation", "security", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "flask>=3.0.0",
    "requests>=2.31.0",
    "python-whois>=0.9.4",
    "dnspython>=2.6.1",
    "phonenumbers>=8.13.0",
    "Pillow>=10.3.0",
    "email-validator>=2.1.0",
    "cryptography>=42.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[project.scripts]
reaperx = "reaperx.cli:main"

[project.urls]
Homepage = "https://github.com/alertbros0/ReaperX"
Repository = "https://github.com/alertbros0/ReaperX"
Issues = "https://github.com/alertbros0/ReaperX/issues"

[tool.setuptools.packages.find]
include = ["reaperx*"]

[tool.setuptools.package-data]
reaperx = ["templates/*.html", "static/*.css", "static/*.js", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra -q"
